Fixed overflow Katex display equation

--- a/src/views/pages/post-page/post-page.component.scss
+++ b/src/views/pages/post-page/post-page.component.scss
@@ -3,3 +3,7 @@
     height: 80px;
     object-fit: cover;
 }
+
+#content {
+    overflow-x: scroll;
+}
